# industrial-qc-pipeline

./: .gitignore  README.md  pyproject.toml
requirements/: base.txt  train.txt
scripts/: evaluate_roi_vs_full.py  predict_pipeline.py  prepare_dataset.py  prepare_roi_dataset.py  setup_env.sh  train_unet.py  train_yolo.py  with_dns.sh
src/industrial_qc/: __init__.py  config.py  losses.py  metrics.py  pipeline.py  runtime.py  wandb_utils.py
src/industrial_qc/data/: __init__.py  convert.py  roi.py  segmentation_dataset.py
src/industrial_qc/models/: __init__.py  unet.py
tests/: test_config.py  test_convert.py  test_predict_pipeline.py  test_roi_dataset.py  test_unet.py
